[player] Fix player not showing drop lists properly
The whole DOM structure is kind of botched. This is a quick fix and 
should be reviewed.

--- a/projects/player/src/styles.css
+++ b/projects/player/src/styles.css
@@ -6,3 +6,7 @@ body {
 .inline-container{
   display: inline;
 }
+
+form {
+  display: inline;
+}
